--- a/index.html
+++ b/index.html
@@ -39,11 +39,6 @@
       </div>
     </section>
 
-    <section id="gold-box" class="bg-blue-800 rounded-xl shadow-2xl p-2 text-center text-white persian-numbers">
-          نقدی: <span id="goldbubble"></span>
-    </section>
-
-    </section>
     <section class="bg-white rounded-xl shadow-2xl p-3 text-center persian-numbers">
       <h3 id="portfolio-title" class="text-2xl font-extrabold text-purple-800 mb-2 drop-shadow-lg">طلای آبشده</h3>
       <p id="portfolio-value" class="text-2xl font-extrabold persian-numbers text-black mt-3 drop-shadow-lg">...</p>
@@ -57,6 +52,10 @@
       در حال دریافت اطلاعات رمزارزها...
     </section>
 
+    <section id="cash-box" class="bg-blue-800 rounded-xl shadow-2xl p-2 text-center text-white persian-numbers">
+          نقدی: <span id="cash-amount"></span>
+    </section>
+
     <section class="bg-purple-800 rounded-xl shadow-2xl p-3 text-center">
       <p id="gold-amount" class="text-2xl font-extrabold persian-numbers text-white mt-1 drop-shadow-lg">...</p>
     </section>
@@ -65,6 +64,7 @@
   </main>
 
   <script>
+    const cashAmount = 11726;
     const myGoldGrams = 442.664;
     const ayarUnits = 45912;
     const avgayarPrice = 205955;
@@ -147,6 +147,7 @@
       try {
         const response = await fetch("https://brsapi.ir/Api/Market/Gold_Currency.php?key=FreeTZPrEbgTZzbW2SSGXOlzjlulRFcz");
         const data = await response.json();
+
         const gold18 = data.gold.find(i => i.symbol === "IR_GOLD_18K");
         const usd = data.currency.find(i => i.symbol === "USD");
 
@@ -166,9 +167,8 @@
                 document.getElementById("usdt-box").insertAdjacentHTML("afterend", ounceHtml);
              }
           }
-          
         }
-        
+
         if (gold18) {
           const changeColor = gold18.change_percent > 0 ? 'green' : gold18.change_percent < 0 ? 'red' : 'black';
           animateElement("gold18-box", `<span style="color:${changeColor}">طلای ۱۸ عیار: ${toPersianNumber(gold18.price.toLocaleString())} (${toPersianNumber(Math.abs(gold18.change_value).toLocaleString())} | ${toPersianNumber(Math.abs(gold18.change_percent.toFixed(2)))}%)</span>`);
@@ -217,7 +217,7 @@
                 if (ayar && ayar.pc) {
                     const unitfee = ((ayarUnits * (ayar.pc / 10)) * 0.12) / 100;
                     const result = (ayarUnits * (ayar.pc / 10)) - unitfee;
-                    const combined = totalGoldValue + result + totalIrt;
+                    const combined = totalGoldValue + result + totalIrt + cashAmount;
                     const color = ayar.pcp > 0 ? 'green' : ayar.pcp < 0 ? 'red' : 'black';
 
                     animateElement("fund-price-box", `<span style="color:${color}">صندوق عیار: ${toPersianNumber(ayar.pc.toLocaleString())} (${toPersianNumber(Math.abs(ayar.pcc).toLocaleString())} | ${toPersianNumber(Math.abs(ayar.pcp.toFixed(2)))}%)</span>`);
@@ -248,11 +248,9 @@
                  console.error("خطا در دریافت اطلاعات صندوق:", err);
                  animateElement("profit-box", "خطا در دریافت قیمت صندوق");
           }
-          if (ounceGold && usd && gold18) {
-            const goldvalue = ((ounceGold.price * usd.price) / 31.1) / 0.75;
-            const goldbubble = ((gold18.price - goldvalue) / goldvalue) * 100;
-            document.getElementById("goldbubble").innerText = `${toPersianNumber(goldbubble.toFixed(2))}٪`;
-          }
+          const goldvalue = ((ounceGold.price * usd.price) / 31.1) / 0.75;
+          const goldbubble = ((gold18.price - goldvalue) / goldvalue) * 100;
+          document.getElementById("cash-amount").innerText = `${toPersianNumber(goldbubble.toFixed(2))}٪`;
           const now = new Date();
           const formattedDate = toPersianNumber(now.toLocaleDateString("fa-IR"));
           const formattedTime = toPersianNumber(now.toLocaleTimeString("fa-IR").replace(/:\d+$/, ''));
